cluster/manifests/argocd/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    pod-security.kubernetes.io/enforce: restricted
