cluster/manifests/argocd/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: argocd-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - argocd.minikube.127.0.0.1.nip.io
        - argocd.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
