cluster/manifests/argocd/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server
spec:
  gateways:
    - argocd-server
  hosts:
    - argocd.minikube.127.0.0.1.nip.io
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
