cluster/manifests/argocd/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-repo-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-application-controller
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              istio: ingressgateway
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-redis-haproxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd
      app.kubernetes.io/component: redis-haproxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-repo-server
        - namespaceSelector:
            matchLabels:
              name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-server
        - namespaceSelector:
            matchLabels:
              name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-application-controller
        - namespaceSelector:
            matchLabels:
              name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/component: http-redis-proxy
      ports:
        - protocol: TCP
          port: 6380
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-http-redis-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd
      app.kubernetes.io/component: http-redis-proxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              istio: ingressgateway
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-redis-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: istio-system
          podSelector:
            matchLabels:
              app: istiod
      ports:
        - protocol: TCP
          port: 15012
    - to:
        - namespaceSelector:
            matchLabels:
              name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-agent
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 4317
